stlye: fix the overflow word

--- a/src/components/ReplyList/ReplyList.module.scss
+++ b/src/components/ReplyList/ReplyList.module.scss
@@ -59,6 +59,7 @@
       }
     }
     .TweetContent {
+      word-wrap: break-word;
       color: #171725;
       font-size: 24px;
       margin-bottom: 8px;
