--- a/src/components/TweetItem/TweetItem.module.scss
+++ b/src/components/TweetItem/TweetItem.module.scss
@@ -29,6 +29,7 @@
       line-height: 22px;
     }
     .TweetContent {
+      word-wrap: break-word;
       margin-top: 8px;
       margin-bottom: 11px;
       font-weight: 400;
